deploymentfiles/istio/moviesdemo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: moviesdemo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-moviesdemo
spec:
  hosts:
  - "*"
  gateways:
  - moviesdemo-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /movies  
    route:
    - destination:
        host: frontend
        port:
          number: 80
